# kawa-scheme

./: .gitignore  .gitlab-ci.yml  ChangeLog  ChangeLog.invoke  Makefile.am  Makefile.in  README.md  TODO  build.xml  classes-to-skip-for-runtime  config.classpath  configure.ac  source-list
doc/: ChangeLog  Makefile.am  kawa.man  kawa.texi  news.texi  qexo.man
doc/style/: docbook-to-html.xsl  kawa-ebook.css  kawa-ebook.js  kawa-l.css  kawa.css  kawa.xsl
gnu/: Makefile.am  Makefile.in
gnu/brl/: stringfun.scm
gnu/bytecode/: AnnotationEntry.java  ChangeLog  ClassType.java  CodeAttr.java  Label.java  ListCodeSize.java  LocalVarsAttr.java  Method.java  ObjectType.java  ParameterizedType.java  PrimType.java  Scope.java  SwitchState.java  Type.java  Variable.java
gnu/expr/: ANormalize.java  ApplicationMainSupport.java  ApplyExp.java  BeginExp.java  BindingInitializer.java  BlockExp.java  CaseExp.java  CatchClause.java  ChangeLog  CheckedTarget.java  ClassExp.java  Compilation.java  CompiledProc.java  ConsumerTarget.java  Declaration.java  ExitExp.java  ExpVisitor.java  Expression.java  FindCapturedVars.java  GenericProc.java  HasOwningField.java  IfExp.java  InlineCalls.java  KawaScriptEngine.java  LambdaExp.java  Language.java  LetExp.java  LitTable.java  Mangling.java  ModuleBody.java  ModuleContext.java  ModuleExp.java  ModuleInfo.java  ModuleMethod.java  ObjectExp.java  PrimProcedure.java  ProcInitializer.java  PushApply.java  QuoteExp.java  ReferenceExp.java  (+9 more)
gnu/lists/: AbstractCharVector.java  AbstractSequence.java  BitVector.java  Blob.java  ByteVector.java  ChangeLog  CharBuffer.java  LList.java  (+25 more)
kawa/: ChangeLog  DomTermBackend.java  Shell.java  repl.java
kawa/lib/: ChangeLog  DefineRecordType.scm  ExceptionClasses.scm  Makefile.am  Makefile.in  arrays.scm  bytevectors.scm  case_syntax.scm  characters.scm  compile_map.scm  compile_misc.scm  enums.scm  exceptions.scm  files.scm  keywords.scm  lists.scm  misc.scm  misc_syntax.scm  numbers.scm  parameters.scm  ports.scm  prim_imports.scm  prim_syntax.scm  reflection.scm  std_syntax.scm  strings.scm  strings_ext.scm  strings_syntax.scm  syntax.scm  system.scm  thread.scm  trace.scm  uniform.scm  vectors.scm  windows.scm
kawa/lib/kawa/: arglist.scm  base.scm  domterm.scm  expressions.scm  hashtable.scm  istrings.scm  mstrings.scm  null-5.scm  pictures.scm  pprint.scm  process-keywords.scm  quaternions.scm  reflect.scm  regex.scm  rotations.scm  string-cursors.scm  swing.scm
kawa/lib/rnrs/: hashtables.scm  lists.scm  programs.scm  sorting.scm  unicode.scm
kawa/lib/rnrs/arithmetic/: bitwise.scm
kawa/lib/scheme/: base-exports  base.scm  char-exports  eval.scm  r5rs.scm
kawa/lib/srfi/: 26.scm  8.scm  95.scm
kawa/lib/xquery/: Xutils.scm
nbproject/: project.xml
testsuite/: ChangeLog  Makefile.am  annotations1-bytecode.expected  annotations1.scm  array1.scm  bad-keywords1.scm  bad-voidexp.scm  case-test.scm  case-warnings.scm  convert1.scm  errors1.scm  errors3.scm  errors5.scm  fasta.scm  formatst.scm  func1.scm  inline5.scm  inlining-test.scm  inlining.expected  java-array-test.scm  jmc.scm  lib-test.scm  match1.scm  misc-test.scm  nesting-1.scm  r7rs-tests.scm  reflect-fname.scm  srfi-108-test.scm  strings-test.scm  sva36413.scm  sva36853.scm  sva48938.scm  sva49416.scm  system-test.scm  testing.scm  text-test.scm  uninit1.scm  use-slots.scm  vars-test.scm
(+216 files in other folders)
